// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-customer-email-preview renders 1`] = `
<sc-customer-email-preview>
  <sc-flex alignitems="center" justifycontent="space-between">
    <p>
      Email
    </p>
    <sc-flex alignitems="center" justifycontent="flex-end">
      <span class="customer-email"></span>
      <span></span>
    </sc-flex>
  </sc-flex>
</sc-customer-email-preview>
`;

exports[`sc-customer-email-preview renders with user logged in 1`] = `
<sc-customer-email-preview>
  <sc-flex alignitems="center" justifycontent="space-between">
    <p>
      Email
    </p>
    <sc-flex alignitems="center" justifycontent="flex-end">
      <span class="customer-email">
        test@example.com
      </span>
      <span>
        <sc-button type="text">
          <sc-icon name="log-out"></sc-icon>
        </sc-button>
      </span>
    </sc-flex>
  </sc-flex>
</sc-customer-email-preview>
`;
